// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeepSeekChatLanguageModel > doGenerate > reasoning > should extract text content 1`] = `
{
  "content": [
    {
      "text": "We need answer simple. Count r in strawberry. s t r a w b e r r y? Wait "strawberry" letters: s(1) t(2) r(3) a(4) w(5) b(6) e(7) r(8) r(9) y(10). So three r's? Let's verify spelling strawberry has "str" one r, and "berry" has two r? Actually berry is b e r r y, yes two. Total 3. Need respond.",
      "type": "reasoning",
    },
    {
      "text": "There are **3** “r”s in **“strawberry”**.",
      "type": "text",
    },
  ],
  "finishReason": {
    "raw": "stop",
    "unified": "stop",
  },
  "providerMetadata": {
    "deepseek": {
      "promptCacheHitTokens": 0,
      "promptCacheMissTokens": 97,
    },
  },
  "request": {
    "body": {
      "frequency_penalty": undefined,
      "max_tokens": undefined,
      "messages": [
        {
          "content": "Hello",
          "role": "user",
        },
      ],
      "model": "deepseek-v4-flash",
      "presence_penalty": undefined,
      "response_format": undefined,
      "stop": undefined,
      "temperature": undefined,
      "thinking": undefined,
      "tool_choice": undefined,
      "tools": undefined,
      "top_p": undefined,
    },
  },
  "response": {
    "body": {
      "choices": [
        {
          "finish_reason": "stop",
          "index": 0,
          "logprobs": null,
          "message": {
            "content": "There are **3** “r”s in **“strawberry”**.",
            "reasoning_content": "We need answer simple. Count r in strawberry. s t r a w b e r r y? Wait "strawberry" letters: s(1) t(2) r(3) a(4) w(5) b(6) e(7) r(8) r(9) y(10). So three r's? Let's verify spelling strawberry has "str" one r, and "berry" has two r? Actually berry is b e r r y, yes two. Total 3. Need respond.",
            "role": "assistant",
          },
        },
      ],
      "created": 1786782774,
      "id": "96ab47fa-9056-448e-8293-24546c4b4c2a",
      "model": "deepseek-v4-flash",
      "object": "chat.completion",
      "system_fingerprint": "a26a7955944dc5c60445bff77fac9c8e",
      "usage": {
        "completion_tokens": 131,
        "completion_tokens_details": {
          "reasoning_tokens": 113,
        },
        "prompt_cache_hit_tokens": 0,
        "prompt_cache_miss_tokens": 97,
        "prompt_tokens": 97,
        "prompt_tokens_details": {
          "cached_tokens": 0,
        },
        "total_tokens": 228,
      },
    },
    "headers": {
      "content-length": "882",
      "content-type": "application/json",
    },
    "id": "96ab47fa-9056-448e-8293-24546c4b4c2a",
    "modelId": "deepseek-v4-flash",
    "timestamp": 2026-08-15T08:32:54.000Z,
  },
  "usage": {
    "inputTokens": {
      "cacheRead": 0,
      "cacheWrite": undefined,
      "noCache": 97,
      "total": 97,
    },
    "outputTokens": {
      "reasoning": 113,
      "text": 18,
      "total": 131,
    },
    "raw": {
      "completion_tokens": 131,
      "completion_tokens_details": {
        "reasoning_tokens": 113,
      },
      "prompt_cache_hit_tokens": 0,
      "prompt_cache_miss_tokens": 97,
      "prompt_tokens": 97,
      "total_tokens": 228,
    },
  },
  "warnings": [],
}
`;

exports[`DeepSeekChatLanguageModel > doGenerate > text > should extract text content 1`] = `
{
  "content": [
    {
      "text": "Introducing "Lumina Tide," a holiday celebrating the ocean's bioluminescent glow, observed on the night of the first new moon in June. Traditions include families gathering on beaches to release hand-painted, floating lanterns shaped like sea creatures, each carrying a written wish for the coming season. As the lanterns drift on the dark water, participants share a communal "silent chorus," humming together in harmony to mimic the peaceful pulse of the glowing waves.",
      "type": "text",
    },
  ],
  "finishReason": {
    "raw": "stop",
    "unified": "stop",
  },
  "providerMetadata": {
    "deepseek": {
      "promptCacheHitTokens": 0,
      "promptCacheMissTokens": 22,
    },
  },
  "request": {
    "body": {
      "frequency_penalty": undefined,
      "max_tokens": undefined,
      "messages": [
        {
          "content": "Hello",
          "role": "user",
        },
      ],
      "model": "deepseek-v4-flash",
      "presence_penalty": undefined,
      "response_format": undefined,
      "stop": undefined,
      "temperature": undefined,
      "thinking": undefined,
      "tool_choice": undefined,
      "tools": undefined,
      "top_p": undefined,
    },
  },
  "response": {
    "body": {
      "choices": [
        {
          "finish_reason": "stop",
          "index": 0,
          "logprobs": null,
          "message": {
            "content": "Introducing "Lumina Tide," a holiday celebrating the ocean's bioluminescent glow, observed on the night of the first new moon in June. Traditions include families gathering on beaches to release hand-painted, floating lanterns shaped like sea creatures, each carrying a written wish for the coming season. As the lanterns drift on the dark water, participants share a communal "silent chorus," humming together in harmony to mimic the peaceful pulse of the glowing waves.",
            "role": "assistant",
          },
        },
      ],
      "created": 1786782799,
      "id": "646de991-2676-41d8-b931-0c543031f7b0",
      "model": "deepseek-v4-flash",
      "object": "chat.completion",
      "system_fingerprint": "a26a7955944dc5c60445bff77fac9c8e",
      "usage": {
        "completion_tokens": 93,
        "prompt_cache_hit_tokens": 0,
        "prompt_cache_miss_tokens": 22,
        "prompt_tokens": 22,
        "prompt_tokens_details": {
          "cached_tokens": 0,
        },
        "total_tokens": 115,
      },
    },
    "headers": {
      "content-length": "932",
      "content-type": "application/json",
    },
    "id": "646de991-2676-41d8-b931-0c543031f7b0",
    "modelId": "deepseek-v4-flash",
    "timestamp": 2026-08-15T08:33:19.000Z,
  },
  "usage": {
    "inputTokens": {
      "cacheRead": 0,
      "cacheWrite": undefined,
      "noCache": 22,
      "total": 22,
    },
    "outputTokens": {
      "reasoning": 0,
      "text": 93,
      "total": 93,
    },
    "raw": {
      "completion_tokens": 93,
      "prompt_cache_hit_tokens": 0,
      "prompt_cache_miss_tokens": 22,
      "prompt_tokens": 22,
      "total_tokens": 115,
    },
  },
  "warnings": [],
}
`;

exports[`DeepSeekChatLanguageModel > doGenerate > tool call > json response format > should extract text content 1`] = `
{
  "content": [
    {
      "text": "{"location":"San Francisco","condition":"cloudy","temperature":7}",
      "type": "text",
    },
  ],
  "finishReason": {
    "raw": "stop",
    "unified": "stop",
  },
  "providerMetadata": {
    "deepseek": {
      "promptCacheHitTokens": 0,
      "promptCacheMissTokens": 483,
    },
  },
  "request": {
    "body": {
      "frequency_penalty": undefined,
      "max_tokens": undefined,
      "messages": [
        {
          "content": "Return JSON.",
          "role": "system",
        },
        {
          "content": "Hello",
          "role": "user",
        },
      ],
      "model": "deepseek-v4-pro",
      "presence_penalty": undefined,
      "response_format": {
        "type": "json_object",
      },
      "stop": undefined,
      "temperature": undefined,
      "thinking": {
        "type": "enabled",
      },
      "tool_choice": undefined,
      "tools": [
        {
          "function": {
            "description": undefined,
            "name": "weather",
            "parameters": {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "additionalProperties": false,
              "properties": {
                "location": {
                  "type": "string",
                },
              },
              "required": [
                "location",
              ],
              "type": "object",
            },
          },
          "type": "function",
        },
      ],
      "top_p": undefined,
    },
  },
  "response": {
    "body": {
      "choices": [
        {
          "finish_reason": "stop",
          "index": 0,
          "logprobs": null,
          "message": {
            "content": "{"location":"San Francisco","condition":"cloudy","temperature":7}",
            "reasoning_content": "",
            "role": "assistant",
          },
        },
      ],
      "created": 1786782780,
      "id": "b45dc2c1-2cee-4152-9c14-85840077254b",
      "model": "deepseek-v4-flash",
      "object": "chat.completion",
      "system_fingerprint": "a26a7955944dc5c60445bff77fac9c8e",
      "usage": {
        "completion_tokens": 16,
        "completion_tokens_details": {
          "reasoning_tokens": 0,
        },
        "prompt_cache_hit_tokens": 0,
        "prompt_cache_miss_tokens": 483,
        "prompt_tokens": 483,
        "prompt_tokens_details": {
          "cached_tokens": 0,
        },
        "total_tokens": 499,
      },
    },
    "headers": {
      "content-length": "608",
      "content-type": "application/json",
    },
    "id": "b45dc2c1-2cee-4152-9c14-85840077254b",
    "modelId": "deepseek-v4-flash",
    "timestamp": 2026-08-15T08:33:00.000Z,
  },
  "usage": {
    "inputTokens": {
      "cacheRead": 0,
      "cacheWrite": undefined,
      "noCache": 483,
      "total": 483,
    },
    "outputTokens": {
      "reasoning": 0,
      "text": 16,
      "total": 16,
    },
    "raw": {
      "completion_tokens": 16,
      "completion_tokens_details": {
        "reasoning_tokens": 0,
      },
      "prompt_cache_hit_tokens": 0,
      "prompt_cache_miss_tokens": 483,
      "prompt_tokens": 483,
      "total_tokens": 499,
    },
  },
  "warnings": [],
}
`;

exports[`DeepSeekChatLanguageModel > doGenerate > tool call > should extract tool call content 1`] = `
{
  "content": [
    {
      "text": "The user asks about weather in San Francisco. I'll call the weather tool.",
      "type": "reasoning",
    },
    {
      "input": "{"location": "San Francisco"}",
      "toolCallId": "call_00_lCIkdHRa7AKmCG3TlxXz1061",
      "toolName": "weather",
      "type": "tool-call",
    },
  ],
  "finishReason": {
    "raw": "tool_calls",
    "unified": "tool-calls",
  },
  "providerMetadata": {
    "deepseek": {
      "promptCacheHitTokens": 0,
      "promptCacheMissTokens": 374,
    },
  },
  "request": {
    "body": {
      "frequency_penalty": undefined,
      "max_tokens": undefined,
      "messages": [
        {
          "content": "Hello",
          "role": "user",
        },
      ],
      "model": "deepseek-v4-pro",
      "presence_penalty": undefined,
      "response_format": undefined,
      "stop": undefined,
      "temperature": undefined,
      "thinking": {
        "type": "enabled",
      },
      "tool_choice": undefined,
      "tools": [
        {
          "function": {
            "description": undefined,
            "name": "weather",
            "parameters": {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "additionalProperties": false,
              "properties": {
                "location": {
                  "type": "string",
                },
              },
              "required": [
                "location",
              ],
              "type": "object",
            },
          },
          "type": "function",
        },
      ],
      "top_p": undefined,
    },
  },
  "response": {
    "body": {
      "choices": [
        {
          "finish_reason": "tool_calls",
          "index": 0,
          "logprobs": null,
          "message": {
            "content": "",
            "reasoning_content": "The user asks about weather in San Francisco. I'll call the weather tool.",
            "role": "assistant",
            "tool_calls": [
              {
                "function": {
                  "arguments": "{"location": "San Francisco"}",
                  "name": "weather",
                },
                "id": "call_00_lCIkdHRa7AKmCG3TlxXz1061",
                "index": 0,
                "type": "function",
              },
            ],
          },
        },
      ],
      "created": 1786782778,
      "id": "21d2ddcb-4947-4e28-a783-857aedbe6ace",
      "model": "deepseek-v4-flash",
      "object": "chat.completion",
      "system_fingerprint": "a26a7955944dc5c60445bff77fac9c8e",
      "usage": {
        "completion_tokens": 60,
        "completion_tokens_details": {
          "reasoning_tokens": 16,
        },
        "prompt_cache_hit_tokens": 0,
        "prompt_cache_miss_tokens": 374,
        "prompt_tokens": 374,
        "prompt_tokens_details": {
          "cached_tokens": 0,
        },
        "total_tokens": 434,
      },
    },
    "headers": {
      "content-length": "776",
      "content-type": "application/json",
    },
    "id": "21d2ddcb-4947-4e28-a783-857aedbe6ace",
    "modelId": "deepseek-v4-flash",
    "timestamp": 2026-08-15T08:32:58.000Z,
  },
  "usage": {
    "inputTokens": {
      "cacheRead": 0,
      "cacheWrite": undefined,
      "noCache": 374,
      "total": 374,
    },
    "outputTokens": {
      "reasoning": 16,
      "text": 44,
      "total": 60,
    },
    "raw": {
      "completion_tokens": 60,
      "completion_tokens_details": {
        "reasoning_tokens": 16,
      },
      "prompt_cache_hit_tokens": 0,
      "prompt_cache_miss_tokens": 374,
      "prompt_tokens": 374,
      "total_tokens": 434,
    },
  },
  "warnings": [],
}
`;

exports[`DeepSeekChatLanguageModel > doStream > reasoning > should stream reasoning 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "id": "b1e23612-29d5-4f66-b185-fb61fdde0ac9",
    "modelId": "deepseek-v4-flash",
    "timestamp": 2026-08-15T08:32:56.000Z,
    "type": "response-metadata",
  },
  {
    "id": "reasoning-0",
    "type": "reasoning-start",
  },
  {
    "delta": "We",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " need",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " answer",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " simple",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ".",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " Need",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " count",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " in",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " strawberry",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ".",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " strawberry",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " letters",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " s",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " t",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " a",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " w",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " b",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " e",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " y",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "?",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " Let",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "'s",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " count",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ":",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " "",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "st",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "raw",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "berry",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": """,
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " has",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " at",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " position",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " ",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "3",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ",",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " and",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " then",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " "",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "berry",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": """,
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " has",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " two",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "?",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " Actually",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " strawberry",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " =",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " straw",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " +",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " berry",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ".",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " "",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "st",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "raw",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": """,
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " has",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " one",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ",",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " "",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "berry",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": """,
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " has",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " two",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "?",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " b",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " e",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " y",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " yes",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " two",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ".",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " total",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " ",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "3",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " r",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": "'s",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ".",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " Need",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " answer",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ".",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "id": "txt-0",
    "type": "text-start",
  },
  {
    "id": "reasoning-0",
    "type": "reasoning-end",
  },
  {
    "delta": "There",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " are",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " **",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "3",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "**",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " “",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "r",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "”",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "s",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " in",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " **",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "“",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "st",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "raw",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "berry",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "”",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "**.",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "id": "txt-0",
    "type": "text-end",
  },
  {
    "finishReason": {
      "raw": "stop",
      "unified": "stop",
    },
    "providerMetadata": {
      "deepseek": {
        "promptCacheHitTokens": 0,
        "promptCacheMissTokens": 97,
      },
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": 0,
        "cacheWrite": undefined,
        "noCache": 97,
        "total": 97,
      },
      "outputTokens": {
        "reasoning": 88,
        "text": 18,
        "total": 106,
      },
      "raw": {
        "completion_tokens": 106,
        "completion_tokens_details": {
          "reasoning_tokens": 88,
        },
        "prompt_cache_hit_tokens": 0,
        "prompt_cache_miss_tokens": 97,
        "prompt_tokens": 97,
        "total_tokens": 203,
      },
    },
  },
]
`;

exports[`DeepSeekChatLanguageModel > doStream > text > should stream text 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "id": "0cd1282e-a9cf-4e5f-85a1-069a1669f0ce",
    "modelId": "deepseek-v4-flash",
    "timestamp": 2026-08-15T08:33:21.000Z,
    "type": "response-metadata",
  },
  {
    "id": "txt-0",
    "type": "text-start",
  },
  {
    "delta": "Introdu",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "cing",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " "",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "L",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "umina",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "'s",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " Eve",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": ","",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " a",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " holiday",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " of",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " gratitude",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " and",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " light",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " celebrated",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " on",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " the",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " winter",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " sol",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "stice",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": ".",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " Its",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " main",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " tradition",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " is",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " the",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " "",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "Lan",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "tern",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " Walk",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": ","",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " where",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " families",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " carry",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " hand",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "-p",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "ainted",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": ",",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " biodegradable",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " lantern",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "s",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " to",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " a",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " hill",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "top",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": ",",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " releasing",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " them",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " into",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " the",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " sky",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " with",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " a",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " whispered",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " wish",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " for",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " someone",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " they",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "’",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "re",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " thankful",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " for",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": ".",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " The",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " evening",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " ends",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " with",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " a",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " shared",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " feast",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " of",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " "",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "gl",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "ow",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "st",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "ew",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": """,
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " and",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " star",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "-shaped",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " cookies",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": ",",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " eaten",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " in",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " silence",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " under",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " the",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " stars",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " to",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " reflect",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " on",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " the",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " interconnected",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": "ness",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " of",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " all",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": " things",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "delta": ".",
    "id": "txt-0",
    "type": "text-delta",
  },
  {
    "id": "txt-0",
    "type": "text-end",
  },
  {
    "finishReason": {
      "raw": "stop",
      "unified": "stop",
    },
    "providerMetadata": {
      "deepseek": {
        "promptCacheHitTokens": 0,
        "promptCacheMissTokens": 22,
      },
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": 0,
        "cacheWrite": undefined,
        "noCache": 22,
        "total": 22,
      },
      "outputTokens": {
        "reasoning": 0,
        "text": 98,
        "total": 98,
      },
      "raw": {
        "completion_tokens": 98,
        "prompt_cache_hit_tokens": 0,
        "prompt_cache_miss_tokens": 22,
        "prompt_tokens": 22,
        "total_tokens": 120,
      },
    },
  },
]
`;

exports[`DeepSeekChatLanguageModel > doStream > tool call > should stream tool call 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "id": "6e77be01-935b-42f6-8b05-d6c763528589",
    "modelId": "deepseek-v4-flash",
    "timestamp": 2026-08-15T08:32:59.000Z,
    "type": "response-metadata",
  },
  {
    "id": "reasoning-0",
    "type": "reasoning-start",
  },
  {
    "delta": "The",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " user",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " asks",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " about",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " the",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " weather",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " in",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " San",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " Francisco",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ".",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " I",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " should",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " use",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " the",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " weather",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": " tool",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "delta": ".",
    "id": "reasoning-0",
    "type": "reasoning-delta",
  },
  {
    "id": "reasoning-0",
    "type": "reasoning-end",
  },
  {
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "toolName": "weather",
    "type": "tool-input-start",
  },
  {
    "delta": "{",
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": """,
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": "location",
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": """,
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": ": ",
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": """,
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": "San",
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": " Francisco",
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": """,
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "delta": "}",
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-delta",
  },
  {
    "id": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "type": "tool-input-end",
  },
  {
    "input": "{"location": "San Francisco"}",
    "toolCallId": "call_00_IhCAliIHtM9gKpgfqbBV9873",
    "toolName": "weather",
    "type": "tool-call",
  },
  {
    "finishReason": {
      "raw": "tool_calls",
      "unified": "tool-calls",
    },
    "providerMetadata": {
      "deepseek": {
        "promptCacheHitTokens": 256,
        "promptCacheMissTokens": 118,
      },
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": 256,
        "cacheWrite": undefined,
        "noCache": 118,
        "total": 374,
      },
      "outputTokens": {
        "reasoning": 17,
        "text": 44,
        "total": 61,
      },
      "raw": {
        "completion_tokens": 61,
        "completion_tokens_details": {
          "reasoning_tokens": 17,
        },
        "prompt_cache_hit_tokens": 256,
        "prompt_cache_miss_tokens": 118,
        "prompt_tokens": 374,
        "total_tokens": 435,
      },
    },
  },
]
`;
